src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-dhP0.5-b-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault window height: P0.5\nborder on\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 1231 × 328, bounds: 1231 × 680, states: []

post-map configures:
size: 1231 × 328, bounds: 1231 × 680, states: [Activated]
