src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-dhP0.5.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault window height: P0.5"
expression: snapshot
---
initial configure:
size: 1248 × 336, bounds: 1248 × 688, states: []

post-map configures:
size: 1248 × 336, bounds: 1248 × 688, states: [Activated]
